<resources>
    <string name="app_name">PaimanYar+</string>
    <string name="PhoneNumber">شماره موبایل</string>
    <string name="Login">ورود</string>
    <string name="Resend">ارسال مجدد</string>
    <string name="PriceRange">دامنه مناسب قیمت</string>
    <string name="Tools">ابزارها</string>
    <string name="Counter">روزنامه اقتصادی</string>
    <string name="Library">در جریان باشید</string>
    <string name="Tenders">مناقصات</string>
    <string name="TenderAnalise">آنالیز مناقصه</string>
    <string name="fee">رایگان</string>
    <string name="New">جدید</string>
    <string name="Scheduling">زمانبندی</string>
    <string name="Audit">حسابرسی</string>
    <string name="orders">سفارشات</string>
    <string name="Difference">مابه\n التفاوت</string>
    <string name="Difference2">تعدیل و مابه التفاوت ها</string>
    <string name="Adjustment_and_Difference">تعدیل و مابه التفاوت ها</string>
    <string name="CostEstimation">متره و\nبرآورد</string>
    <string name="CostEstimation2">متره و برآورد</string>
    <string name="Ordering_Services">سفارش خدمات</string>
    <string name="Daily">روزانه</string>
    <string name="WorkForce">نیروی کار</string>
    <string name="Machinery">ماشین آلات</string>
    <string name="Materials">مصالح</string>
    <string name="Support">پشتیبانی</string>
    <string name="YourSMS">پیام های شما</string>
    <string name="UnitConversion">تبدیل واحد</string>
    <string name="StallTable">جدول اشتال</string>
    <string name="ruler">خط کش</string>
    <string name="GPS">GPS</string>
    <string name="Charge">شارژ</string>
    <string name="Increase_Credit">افزایش اعتبار</string>
    <string name="Level">تراز</string>
    <string name="magnifier">ذره بین</string>
    <string name="IPB_Wide">عریض IPB</string>
    <string name="IPE_Semi_wide">نیم پهن IPE</string>
    <string name="UNP_Gutters">ناودانی UNP</string>
    <string name="INP_Narrow">باریک INP</string>
    <string name="TheCan">قوطی</string>
    <string name="L_Dont_Look">نبشی L</string>
    <string name="P_Pipe">لوله P</string>
    <string name="Rebar">میلگرد</string>
    <string name="ChangeValue">تغییر مقدار</string>
    <string name="Cancel">انصراف</string>
    <string name="Select">انتخاب</string>
    <string name="Wide">عرض:</string>
    <string name="Length">طول:</string>
    <string name="Save">ذخیره</string>
    <string name="Assumption">پیش فرض</string>
    <string name="Satellite">ماهواره</string>
    <string name="LandSideEffects">عوارض زمین</string>
    <string name="Saves">ذخیره ها</string>
    <string name="Return">بازگشت</string>
    <string name="Again">سعی مجدد</string>
    <string name="SavesGPS">نقاط ذخیره شده</string>
    <string name="Value">مقدار</string>
    <string name="Convert">تبدیل</string>
    <string name="Result">نتیجه</string>
    <string name="Space">فاصله</string>
    <string name="Area">مساحت</string>
    <string name="Volume">حجم</string>
    <string name="Pressure">فشار</string>
    <string name="mass">جرم</string>
    <string name="Density">چگالی</string>
    <string name="power">قدرت</string>
    <string name="Energy">انرژی</string>
    <string name="time">زمان</string>
    <string name="Acceleration">شتاب</string>
    <string name="Speed">سرعت</string>
    <string name="Frequency">فرکانس</string>
    <string name="Angle">زاویه</string>
    <string name="Force">نیرو</string>
    <string name="Torque">گشتاور</string>
    <string name="Lighting">دما</string>
    <string name="Error">خطا</string>
    <string name="Soon">بزودی</string>
    <string name="TenderNotification">اطلاع رسانی مناقصات</string>
    <string name="IncludesTheWord">شامل کلمه</string>
    <string name="FromDate">از تاریخ</string>
    <string name="FromEstimate">برآورد از</string>
    <string name="UntilEstimate">تا برآورد</string>
    <string name="from">از</string>
    <string name="until">تا</string>
    <string name="ok">باشه</string>
    <string name="NeverMind">بیخیال</string>
    <string name="Today">امروز</string>
    <string name="Search">جستجو</string>
    <string name="Analize">آنالیز</string>
    <string name="AnaliseThisTender">آنالیز این مناقصه</string>
    <string name="Let_me_know">باخبرم کن</string>
    <string name="Toman">تومان</string>
    <string name="PaymanyarCode">کد پیمان یار+:</string>
    <string name="NationalEstimate">برآورد مالی:</string>
    <string name="NationalEstimate2">برآورد مالی</string>
    <string name="TenderTitle">عنوان مناقصه:</string>
    <string name="ReopeningDate">تاریخ بازگشایی:</string>
    <string name="SendSuggestionsUp">ارسال پیشنهاد تا:</string>
    <string name="GetDocumentsUp">دریافت اسناد تا:</string>
    <string name="Place_of_Receipt_of_Documents">محل دریافت اسناد:</string>
    <string name="CityName">استان:</string>
    <string name="TenderDevice">دستگاه مناقصه گذار:</string>
    <string name="Major">رشته:</string>
    <string name="website">سایت اینترنتی:</string>
    <string name="Description">توضیحات:</string>
    <string name="DetailTender">شرح مناقصه</string>
    <string name="Seen">مشاهده</string>
    <string name="compass">قطب نما</string>
    <string name="PaymanYar">پیمان یار+</string>
    <string name="TenderCharge">شارژ مناقصات</string>
    <string name="Open">باز</string>
    <string name="Close">بستن</string>
    <string name="Buy">خرید</string>
    <string name="Remaining_Time">زمان باقی مانده:</string>
    <string name="Day">روز</string>
    <string name="Hour">ساعت</string>
    <string name="LessThanAnHour">کمتر از یک ساعت</string>
    <string name="BuyCharge">خرید شارژ</string>
    <string name="BuyAd">خرید تبلیغ</string>
    <string name="TenderAmount">مبلغ مناقصه</string>
    <string name="AmountToToman">مبلغ به تومان</string>
    <string name="Number_of_Participants">تعداد شرکت کنندگان</string>
    <string name="Number_of_People">تعداد نفرات</string>
    <string name="Percentage">درصد</string>
    <string name="TheDegree_of_Importance">میزان اهمیت:</string>
    <string name="Computing">محاسبه</string>
    <string name="Offered_Price">مبلغ پیشنهادی:</string>
    <string name="VolunteerCode">کد داوطلب:</string>
    <string name="WinnerTender">برنده مناقصه</string>
    <string name="Title">عنوان</string>
    <string name="SMS">پیام</string>
    <string name="Send">ارسال</string>
    <string name="MessageText">متن پیام</string>
    <string name="Update">بروزرسانی</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="UpdatePlayStore">بروزرسانی در فروشگاه گوگل پلی</string>
    <string name="UpdateBazaar">بروزرسانی در کافه بازار</string>
    <string name="Back_to_the_app">بازگشت به برنامه</string>
    <string name="filter_frames">فیلتر شده ها</string>
    <string name="share">اشتراک</string>
    <string name="SendApplication">ارسال برنامه</string>
    <string name="Favorite">علاقه مندی ها</string>
    <string name="SelectedOneCity">استان</string>
    <string name="SelectedOneMajor">رشته</string>
    <string name="rial">ریال</string>
    <string name="close">بستن</string>
    <string name="installCount">تعداد نصب</string>
    <string name="order">سفارشات</string>
    <string name="Suggest_or_Criticize">پیشنهاد یا انتقاد</string>
    <string name="ContactUs">ارتباط با ما</string>
    <string name="smsBox">جعبه پیام</string>
    <string name="telegramChannel">کانال تلگرام</string>
    <string name="About_the_chart">اطلاعات نمودار</string>
    <string name="upper_line">حد بالا:</string>
    <string name="Low_limit">حد پایین:</string>
    <string name="outOfRange">خارج از دامنه ها:</string>
    <string name="see">مشاهده:</string>
    <string name="TenderName">نام مناقصه</string>
    <string name="DetailsTender">جزئیات مناقصه</string>
    <string name="Name_of_contractor">نام پیمانکار</string>
    <string name="CallNumber">شماره تماس</string>
    <string name="description">توضیحات</string>
    <string name="AddDocuments">افزودن اسناد</string>
    <string name="choseOneFile">یک فایل انتخاب کنید</string>
    <string name="select">انتخاب</string>
    <string name="cancel">انصراف</string>
    <string name="SuggestedPercentages_in_Paymanyar">درصدهای پیشنهادی شما %</string>
    <string name="send_order">ارسال سفارش</string>
    <string name="order_check">بررسی سفارش</string>
    <string name="duration">مدت زمان انجام</string>
    <string name="order_cost">هزینه سفارش</string>
    <string name="doing">درحال انجام</string>
    <string name="Pay">پرداخت هزینه</string>
    <string name="Taking_orders">دریافت سفارش</string>
    <string name="send_orders">ارسال سفارش</string>
    <string name="Previous_orders">سفارشات قبلی</string>
    <string name="New_order">سفارش جدید</string>
    <string name="Amount_in_Rial">مبلغ به ریال</string>
    <string name="Grouping">دسته بندی</string>
    <string name="details">جزئیات</string>
    <string name="detailed_scheduling">زمانبندی تفصیلی</string>
    <string name="initial_scheduling">زمانبندی اولیه</string>
    <string name="Delivery_time">تاریخ تحویل زمین</string>
    <string name="Project_duration">مدت زمان پروژه</string>
    <string name="oneHundredDays">100 روز</string>
    <string name="Schedule">برنامه زمانبندی</string>
    <string name="jum">جام</string>
    <string name="pardis">پردیس</string>
    <string name="sahar">سحر</string>
    <string name="Audit_of_the_year">حسابرسی سال</string>
    <string name="year">سال</string>
    <string name="Suggested">پیشنهادی</string>
    <string name="Above">بالاسری</string>
    <string name="zone">منطقه</string>
    <string name="Equipping_the_ingot_workshop">تجهیزکارگاه</string>
    <string name="Timely">بهنگام</string>
    <string name="Coefficients">ضرایب</string>
    <string name="ProjectName">نام پروژه</string>
    <string name="Price_list">فهرست بها</string>
    <string name="Duration_of_allowed_delays">مدت زمان تاخیرات مجاز</string>
    <string name="Duration_of_unauthorized_delays">مدت زمان تاخیرات غیر مجاز</string>
    <string name="month">ماه</string>
    <string name="day">روز</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>
    <string name="file">فایل</string>
    <string name="help">راهنما</string>
    <string name="delete">حذف</string>
    <string name="Adjustment_and_etc">تعدیل و ...</string>
    <string name="as_soon_as_possible">در اسرع وقت</string>
    <string name="Done">انجام شد</string>
    <string name="filterSearch">فیلتر جستجو</string>
    <string name="PowerSupplyNetwork">شبکه تامین نیروی کار</string>
    <string name="MachineryNetwork">شبکه تامین ماشین آلات</string>
    <string name="MaterialNetwork">شبکه تامین مصالح</string>
    <string name="MyPowerSupplyNetwork">نیروکارهای من</string>
    <string name="MyMachinery">ماشین آلات من</string>
    <string name="SupplyNetwork">شبکه تامین</string>
    <string name="MyMaterial">مصالح من</string>
    <string name="Province">استان</string>
    <string name="City">شهر</string>
    <string name="AdType">نوع آگهی</string>
    <string name="Ad">آگهی</string>
    <string name="Price">قیمت</string>
    <string name="Price2">قیمت (توافقی)</string>
    <string name="MachineryCategory">دسته ماشین آلات</string>
    <string name="MaterialCategory">دسته مصالح</string>
    <string name="call">تماس</string>
    <string name="name">نام</string>
    <string name="cellPhoneNumber">شماره تماس</string>
    <string name="addImage">افزودن عکس</string>
    <string name="RegistrationRequest">درخواست ثبت</string>
    <string name="Check_the_ad">بررسی آگهی</string>
    <string name="Post_an_ad">انتشار آگهی</string>
    <string name="New_Ad">آگهی جدید</string>
    <string name="Ad_upgrade">ارتقا آگهی</string>
    <string name="add">ارسال آگهی</string>
    <string name="WorkExperience">سابقه کار</string>
    <string name="job">شغل</string>
    <string name="AddPowerSupply">افزودن نیروکار</string>
    <string name="AddMachinery">افزودن ماشین آلات</string>
    <string name="AddMaterial">افزودن مصالح</string>
    <string name="DetailAd">جزئیات آگهی</string>
    <string name="Advertising">تبلیغات</string>
</resources>