<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_Tender"
        android:title="@string/TenderCharge"
        android:icon="@drawable/ic_charge"/>

    <item
        android:id="@+id/menu_Login"
        android:title="@string/Login"
        android:icon="@drawable/ic_login"/>

    <item
        android:id="@+id/menu_Ads"
        android:title="@string/Advertising"
        android:icon="@drawable/ic_adds"/>

    <item
        android:id="@+id/menu_smsBox"
        android:title="@string/smsBox"
        android:icon="@drawable/ic_sms_black"/>

    <item
        android:id="@+id/menu_contactUS"
        android:title="@string/ContactUs"
        android:icon="@drawable/ic_support_black"/>

    <item
        android:id="@+id/menu_SendApplication"
        android:title="@string/SendApplication"
        android:icon="@drawable/ic_send_application"/>

    <item
        android:id="@+id/menu_telegramChannel"
        android:title="@string/telegramChannel"
        android:icon="@drawable/ic_telegram"/>

</menu>