<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:textDirection="rtl"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/vazir"
            android:textSize="22dp"
            android:paddingRight="24dp"
            android:text="@string/Grouping"
            android:textColor="@color/colorTitle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorUnderline"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_tenderAnalise"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/TenderAnalise"
                android:layout_marginRight="24dp"
                android:paddingRight="32dp"
                android:fontFamily="@font/vazir" />

            <CheckBox
                android:id="@+id/chk_scheduling"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Scheduling"
                android:layout_marginRight="24dp"
                android:paddingRight="32dp"
                android:fontFamily="@font/vazir" />

            <CheckBox
                android:id="@+id/chk_audit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Audit"
                android:layout_marginRight="24dp"
                android:paddingRight="32dp"
                android:fontFamily="@font/vazir" />

            <CheckBox
                android:id="@+id/chk_difference"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Difference2"
                android:layout_marginRight="24dp"
                android:paddingRight="32dp"
                android:fontFamily="@font/vazir" />

            <CheckBox
                android:id="@+id/chk_costEstimation"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/CostEstimation2"
                android:layout_marginRight="24dp"
                android:paddingRight="32dp"
                android:fontFamily="@font/vazir" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/body">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorUnderline"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/btn_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/Search"
            android:layout_marginLeft="8dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/vazir"
            android:textStyle="bold"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_marginLeft="8dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/vazir"
            android:textStyle="bold"
            android:layout_toRightOf="@id/btn_Search"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

    </RelativeLayout>

</RelativeLayout>