<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:textDirection="rtl"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="@drawable/border_background_error_aplication">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorTitle"
            android:gravity="center"
            android:text="@string/Update"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:textSize="14dp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="15dp"
            android:text="@string/A_new_version_of_the_app_is_availableDo_you_want_to_update"
            android:gravity="center"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="25dp"
            android:layoutDirection="ltr"
            android:textDirection="ltr">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/yes"
                android:fontFamily="@font/vazir"
                android:textSize="14dp"/>

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/no"
                android:fontFamily="@font/vazir"
                android:textSize="14dp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_icon_error_dialog">

        <ImageView
            android:id="@+id/ic_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:src="@drawable/ic_update"/>

    </RelativeLayout>

</RelativeLayout>