<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:textDirection="rtl"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:fontFamily="@font/vazir"
            android:textColor="@color/colorTitle"
            android:text="@string/ChangeValue"
            android:layout_marginRight="24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/head">

        <ScrollView
            android:id="@+id/Items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/filter_dialog_recycler">

            </androidx.recyclerview.widget.RecyclerView>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/main">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray"
            android:layout_alignParentTop="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="left">

            <Button
                android:id="@+id/btn_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Cancel"
                android:textSize="14dp"
                android:fontFamily="@font/vazir"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btn_Select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Select"
                android:textSize="14dp"
                android:fontFamily="@font/vazir"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>